--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="save-item" id="save-item-10"></div>
             </div>
         </fieldset>
-        <fieldset id="stage-container">
+        <fieldset id="achievement-container">
             <legend>Achievements - 実績</legend>
             <span>
                 <div class="save-achievement" id="save-achievement-1" title="Find the not-so-secret weapon&#13;&#10;秘密ではない武器を探す"></div>
